--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,13 @@ jobs:
           extra_nix_config: |
             experimental-features = nix-command flakes
 
+      - name: Setup Nix
+        run: |
+          sudo ln -sf /nix/var/nix/profiles/default/bin/nix /usr/local/bin/nix
+
       - name: Show Nix version
         run: nix --version
 
-      - name: Run challenge tests
+      - name: Run challenge tests as root
         run: |
-          nix run '.#challenges.tests'
+          sudo nix run '.#challenges.tests'
