--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,24 +6,26 @@ on:
   pull_request:
 
 jobs:
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Nix
+        uses: ./.github/actions/setup-nix
+
+      - name: Check Nix formatting
+        run: nix fmt -- --ci
+
   tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Nix (daemon, flakes)
-        uses: cachix/install-nix-action@v31.5.2
-        with:
-          extra_nix_config: |
-            experimental-features = nix-command flakes
-
       - name: Setup Nix
-        run: |
-          sudo ln -sf /nix/var/nix/profiles/default/bin/nix /usr/local/bin/nix
-
-      - name: Show Nix version
-        run: nix --version
+        uses: ./.github/actions/setup-nix
 
       - name: Run challenge tests as root
         run: |
